:bug: fix: align menu button

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -13,6 +13,10 @@
   margin: 0;
 }
 
+.menuButton {
+  vertical-align: middle;
+}
+
 .navbar {
   list-style-type: none;
   padding: 0;
